--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a:visited {
     color: var(--color-brand--1);
 }
 
-.delete__workouts {
+.workouts__modify-delete-all {
     cursor: pointer;
     align-self: center;
     border-radius: 15px;
@@ -51,7 +51,7 @@ a:visited {
     width: 50%;
 }
 
-.delete__workouts.hidden {
+.workouts__modify-delete-all {
     transform: translateY(-30rem);
     height: 0;
     padding: 0 2.25rem;
@@ -59,15 +59,15 @@ a:visited {
     opacity: 0;
 }
 
-.delete__workouts:hover span {
+.workouts__modify-delete-all:hover span {
     display: none;
 }
 
-.delete__workouts:hover {
+.workouts__modify-delete-all:hover {
     background-color: var(--color-brand--1);
 }
 
-.delete__workouts:hover:before {
+.workouts__modify-delete-all:hover:before {
     font-size: 15px;
     content: "🗑️";
 }
@@ -124,6 +124,31 @@ a:visited {
 .workout__title {
     font-size: 1.7rem;
     font-weight: 600;
+}
+
+.workout__modify-container {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+
+.workout__modify-edit {
+    margin-right: 15px;
+    font-size: 12px;
+}
+
+.workout__modify-edit:hover {
+    color: var(--color-brand--2);
+    /*cursor: url("./assets/icon-edit.png"), auto;*/
+}
+
+.workout__modify-delete {
+    font-size: 12px;
+}
+
+.workout__modify-delete:hover {
+    color: var(--color-brand--1);
+    /*cursor: url("./assets/icon-trash.png"), auto;*/
 }
 
 .workout__details {
