--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a:visited {
     width: 50%;
 }
 
-.workouts__modify-delete-all {
+.workouts__modify-delete-all.hidden {
     transform: translateY(-30rem);
     height: 0;
     padding: 0 2.25rem;
