--- a/style.css
+++ b/style.css
@@ -40,6 +40,18 @@ a:visited {
     color: var(--color-brand--1);
 }
 
+.workouts__label-none-listed {
+    font-size: 1.55rem;
+}
+
+.workouts__label-none-listed.hidden {
+    transform: translateY(-30rem);
+    height: 0;
+    padding: 0 2.25rem;
+    margin-bottom: 0;
+    opacity: 0;
+}
+
 .workouts__modify-delete-all {
     cursor: pointer;
     align-self: center;
