--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ a:visited {
     color: var(--color-light--1);
     text-transform: uppercase;
     font-weight: 800;
-    margin-right: 0.75rem;
+    margin-right: 0.95rem;
 }
 
 .form {
@@ -194,12 +194,12 @@ a:visited {
     padding: 1.5rem 2.75rem;
     margin-bottom: 1.75rem;
 
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     gap: 0.5rem 2.5rem;
+    flex-direction: column;
 
     /* Match height and activity boxes */
-    height: 9.25rem;
+    height: 19.25rem;
     transition: all 0.5s, transform 1ms;
 }
 
@@ -217,6 +217,10 @@ a:visited {
 }
 
 .form__row--hidden {
+    display: none;
+}
+
+.form__row.hidden {
     display: none;
 }
 
@@ -242,8 +246,21 @@ a:visited {
     background-color: #fff;
 }
 
-.form__btn {
-    display: none;
+.new__workout-form-btn,
+.modal__edit--workout-form-btn {
+    cursor: pointer;
+    align-self: center;
+    border-radius: 15px;
+    border: none;
+    padding: 5px 5px;
+    margin-top: 10px;
+    background-color: var(--color-brand--2);
+    width: 50%;
+}
+
+.new__workout-form-btn:hover,
+.modal__edit--workout-form-btn:hover {
+    background-color: var(--color-brand--1);
 }
 
 .copyright {
@@ -295,10 +312,10 @@ a:visited {
     border-left: 5px solid var(--color-brand--1);
 }
 
-.modal {
+.modal__edit--workout-form {
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 49%;
+    transform: translate(-50%, -51%);
     z-index: 1000;
     overflow: auto;
     position: fixed;
@@ -316,7 +333,7 @@ a:visited {
     transition: all 0.5s, transform 1ms;
 }
 
-.modal.hidden {
+.modal__edit--workout-form.hidden {
     transform: translateY(-30rem);
     height: 0;
     padding: 0 2.25rem;
