--- a/style.css
+++ b/style.css
@@ -84,6 +84,30 @@ a:visited {
     content: "🗑️";
 }
 
+.sort__workouts {
+    display: flex;
+    align-self: center;
+    margin-bottom: 15px;
+}
+
+.sort__workouts.hidden {
+    transform: translateY(-30rem);
+    height: 0;
+    padding: 0 2.25rem;
+    margin-bottom: 0;
+    opacity: 0;
+}
+
+.sort__workouts--by-label {
+    font-size: 1.55rem;
+    margin-right: 0.5rem;
+}
+
+.sort__workouts--by-options {
+    border-radius: 15px;
+    padding: 3px 3px;
+}
+
 /* SIDEBAR */
 .sidebar {
     flex-basis: 50rem;
@@ -183,7 +207,7 @@ a:visited {
 .workout__value--elevation
 {
     font-size: 1.5rem;
-    margin-right: 0.25rem;
+    margin-right: 0.1rem;
 }
 
 .workout__unit {
