--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ a:visited {
     border-radius: 15px;
     border: none;
     padding: 15px 15px;
-    margin-bottom: 25px;
+    margin-top: 25px;
     background-color: var(--color-brand--2);
     width: 50%;
 }
