--- a/style.css
+++ b/style.css
@@ -118,9 +118,10 @@ a:visited {
 }
 
 .logo {
-    height: 5.2rem;
+    height: 15.2rem;
     align-self: center;
     margin-bottom: 4rem;
+    background-blend-mode: screen;
 }
 
 .workouts {
