--- a/style.css
+++ b/style.css
@@ -46,10 +46,7 @@ a:visited {
 }
 
 .workouts__header--none-listed.hidden {
-    transform: translateY(-30rem);
-    height: 0;
-    padding: 0 2.25rem;
-    opacity: 0;
+    display: none;
 }
 
 .workouts__modify--delete-all {
@@ -64,11 +61,7 @@ a:visited {
 }
 
 .workouts__modify--delete-all.hidden {
-    transform: translateY(-30rem);
-    height: 0;
-    padding: 0 2.25rem;
-    margin-bottom: 0;
-    opacity: 0;
+    display: none;
 }
 
 .workouts__modify--delete-all:hover span {
@@ -91,11 +84,7 @@ a:visited {
 }
 
 .sort__workouts.hidden {
-    transform: translateY(-30rem);
-    height: 0;
-    padding: 0 2.25rem;
-    margin-bottom: 0;
-    opacity: 0;
+    display: none;
 }
 
 .sort__workouts--by-label {
