determining solution to not create a marker & show the form when the view all markers button is clicked

--- a/style.css
+++ b/style.css
@@ -422,6 +422,7 @@ a:visited {
 }
 
 #position__map-to-view-all-markers {
+    display: none;
     color: #ffb545;
     background-color: white;
     border-radius: 5px;
